# codex-find-first-name

./: .gitignore  AGENTS.md  LICENSE  README.md  name_duel_game.py  pyproject.toml  scrape_beliebte_names.py
scripts/: name_fit_review_plan.md  review_name_fit_sample.py  review_phonetics_sample.py
src/name_finder/: __init__.py  analysis.py  name_duel_game.py  name_fit.py  phonetics.py  scrape_beliebte_names.py  scrape_common_surnames.py  syllable_similarity.py
src/name_finder/data/scrapers/: popular_names_de.py
src/name_finder/domain/: models.py
src/name_finder/orchestration/: download_first_names.py
src/name_finder/representation/: cli.py
tests/: test_analysis.py  test_guided_filter.py  test_name_fit.py  test_phonetics.py  test_popular_names_de_scraper.py  test_ranking_state.py  test_review_name_fit_sample.py  test_review_phonetics_sample.py  test_scrape_common_surnames.py  test_scraper_completeness.py  test_syllable_similarity.py  test_undo.py
tests/fixtures/: a_frau.html  a_mann.html
